AC_INIT([djon-client], [0.1], [crossleyjuan@gmail.com], [djon], [http://d-jon.com/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])
LT_INIT([disable-static])
AC_PROG_CXX
AC_SUBST([DJON_CLIENT_SO_VERSION], [0:1:0])
AC_SUBST([DJON_CLIENT_API_VERSION], [0.1])
AC_SUBST([LIB_NAME], [djon-client])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
